--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
-body,
+
 body {
-    background: linear-gradient(-45deg, #00c7ff, #00b2ff, #0e9db4, #23d5ab);
+    background: linear-gradient(-45deg,#ee7752, #e73c7e, #23a6d5, #23d5ab);
 
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
@@ -100,10 +100,10 @@ p {
     padding: 1.25rem;
 }
 
-.hline { width:100%; height:1px; background: rgb(8, 0, 0) }
+.hline { width:100%; height:1px; background: rgb(211, 65, 141) }gi
 
 .b-b-default {
-    border-bottom: 1px solid #f8f5f5;
+    border-bottom: 1px solid #f8f7f7;
 }
 
 .m-b-20 {
@@ -123,7 +123,7 @@ p {
 }
 
 .text-muted {
-    color: #919aa3 !important;
+    color: #857f7f !important;
 }
 
 .b-b-default {
@@ -183,9 +183,10 @@ p {
                                                                     </div>
                                                                     <h6 class="f-w-600">Name</h6>
                                                                     <p>Proffession</p>
+                                                                    <h6 class="text-muted f-w-400">Data Scintist</h6>
                                                                     <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
                                                                 </div>
-                                                                <div class="block_1">Lorem</div> <div class="h_line"></div>
+                                                        
                                                             </div>
                                                             <div class="col-sm-8">
                                                                 <div class="card-block">
