--- a/posts.html
+++ b/posts.html
@@ -4,40 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forum</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="post.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital@1&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <!--NavBar Section-->
-        <div class="navbar">
-            <nav class="navigation hide" id="navigation">
-                <span class="close-icon" id="close-icon" onclick="showIconBar()"><i class="fa fa-close"></i></span>
-                <ul class="nav-list">
-                    <li class="nav-item"><a href="forums.html">Forums</a></li>
-                    <li class="nav-item"><a href="posts.html">Posts</a></li>
-                    <li class="nav-item"><a href="detail.html">Detail</a></li>
-                </ul>
-            </nav>
-            <a class="bar-icon" id="iconBar" onclick="hideIconBar()"><i class="fa fa-bars"></i></a>
-            <div class="brand">My Forum</div>
-        </div>
-        <!--SearchBox Section-->
-        <div class="search-box">
-            <div>
-                <select name="" id="">
-                    <option value="Everything">Everything</option>
-                    <option value="Titles">Titles</option>
-                    <option value="Descriptions">Descriptions</option>
-                </select>
-                <input type="text" name="q" placeholder="search ...">
-                <button><i class="fa fa-search"></i></button>
-            </div>
-        </div>
-    </header>
+   <header>
+       <div class="header">
+
+           <a href="#default" class="logo"><i class=" fa fa-solid fa-user"></i>HAPPY FEET</a>
+           <div class="header-right">
+               <a class="active" href="forums.html">Home</a>
+               <a href="#contact">fav</a>
+               <a href="#about">create post</a>
+                <a href="#login">Log out</a>
+
+           </div>
+       </div>
+   </header>
     <div class="container">
         <!--Navigation-->
         <div class="navigate">
@@ -46,9 +32,9 @@
         <!--Display posts table-->
         <div class="posts-table">
             <div class="table-head">
-                <div class="status">Status</div>
-                <div class="subjects">Subjects</div>
-                <div class="replies">Replies/Views</div>
+                <div class="status">categories</div>
+                <div class="subjects">title!</div>
+
                 <div class="last-reply">Last Reply</div>
             </div>
             <div class="table-row">
@@ -58,9 +44,7 @@
                     <br>
                     <span>Started by <b><a href="">User</a></b> .</span>
                 </div>
-                <div class="replies">
-                    2 replies <br> 125 views
-                </div>
+
 
                 <div class="last-reply">
                     Oct 12 2021
@@ -75,9 +59,6 @@
                     <br>
                     <span>Started by <b><a href="">User</a></b> .</span>
                 </div>
-                <div class="replies">
-                    2 replies <br> 125 views
-                </div>
 
                 <div class="last-reply">
                     Oct 12 2021
@@ -92,9 +73,7 @@
                     <br>
                     <span>Started by <b><a href="">User</a></b> .</span>
                 </div>
-                <div class="replies">
-                    2 replies <br> 125 views
-                </div>
+
 
                 <div class="last-reply">
                     Oct 12 2021
@@ -108,9 +87,6 @@
                     <a href="">Is learning Python on 2021 worth it?</a>
                     <br>
                     <span>Started by <b><a href="">User</a></b> .</span>
-                </div>
-                <div class="replies">
-                    2 replies <br> 125 views
                 </div>
 
                 <div class="last-reply">
@@ -126,9 +102,7 @@
                     <br>
                     <span>Started by <b><a href="">User</a></b> .</span>
                 </div>
-                <div class="replies">
-                    2 replies <br> 125 views
-                </div>
+
 
                 <div class="last-reply">
                     Oct 12 2021
@@ -143,9 +117,7 @@
                     <br>
                     <span>Started by <b><a href="">User</a></b> .</span>
                 </div>
-                <div class="replies">
-                    2 replies <br> 125 views
-                </div>
+
 
                 <div class="last-reply">
                     Oct 12 2021
@@ -161,9 +133,7 @@
                     <br>
                     <span>Started by <b><a href="">User</a></b> .</span>
                 </div>
-                <div class="replies">
-                    2 replies <br> 125 views
-                </div>
+
 
                 <div class="last-reply">
                     Oct 12 2021
@@ -178,9 +148,7 @@
                     <br>
                     <span>Started by <b><a href="">User</a></b> .</span>
                 </div>
-                <div class="replies">
-                    2 replies <br> 125 views
-                </div>
+
 
                 <div class="last-reply">
                     Oct 12 2021
@@ -195,9 +163,7 @@
                     <br>
                     <span>Started by <b><a href="">User</a></b> .</span>
                 </div>
-                <div class="replies">
-                    2 replies <br> 125 views
-                </div>
+
 
                 <div class="last-reply">
                     Oct 12 2021
@@ -212,9 +178,6 @@
                     <br>
                     <span>Started by <b><a href="">User</a></b> .</span>
                 </div>
-                <div class="replies">
-                    2 replies <br> 125 views
-                </div>
 
                 <div class="last-reply">
                     Oct 12 2021
@@ -227,20 +190,18 @@
             <div class="pagination">
                 pages: <a href="">1</a><a href="">2</a><a href="">3</a>
             </div>
+        <h1 href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"click here for some real fun ></h1>
         <!--pagination ends-->
     </div>
 
-    <div class="note">
-        <span><i class="fa fa-frown-o"></i>&nbsp; 0 Engagement Topic</span>&nbsp;&nbsp;&nbsp;<a href=""><i class="fa fa-share-square"></i></a><br>
-        <span><i class="fa fa-book"></i>&nbsp; Low Engagement Topic</span>&nbsp;&nbsp;&nbsp;<a href=""><i class="fa fa-share-square"></i></a><br>
-        <span><i class="fa fa-fire"></i>&nbsp; Popular Topic</span>&nbsp;&nbsp;&nbsp;<a href=""><i class="fa fa-share-square"></i></a><br>
-        <span><i class="fa fa-rocket"></i>&nbsp; High Engagement Topic</span>&nbsp;&nbsp;&nbsp;<a href=""><i class="fa fa-share-square"></i></a><br>
-        <span><i class="fa fa-lock"></i>&nbsp; Closed Topic</span>&nbsp;&nbsp;&nbsp;<a href=""><i class="fa fa-share-square"></i></a><br>
-    </div>
+
 
     <footer>
-        <span>&copy;  Selmi Abderrahim | All Rights Reserved</span>
+
+
+
     </footer>
+
     <script src="main.js"></script>
 </body>
 </html>
