--- a/createThread.html
+++ b/createThread.html
@@ -30,7 +30,7 @@
     <p>Please fill in the following fields to create a new thread</p>
 
 <label the title must be here ></label>
-        <input type="text" name="title" placeholder="title">
+        <input class="titleinput" type="text" name="title" placeholder="title">
     <label> this is the content place </label>
         <textarea class="contentInfo" type="text" name="content" placeholder="content"></textarea>
 <div class="containerThread">
