--- a/createThread.html
+++ b/createThread.html
@@ -13,10 +13,10 @@
     <header>
         <div class="header">
 
-            <a href="#default" class="logo"><i class=" fa fa-solid fa-user"></i>HAPPY FEET</a>
+            <a href="forums.html" class="logo"><i class=" fa fa-solid fa-user"></i>HAPPY FEET</a>
             <div class="header-right">
                 <a class="active" href="forums.html">Home</a>
-                <a href="#contact">fav</a>
+                <a href="favorite.html">favorite</a>
                 <a href="createThread.html">create post</a>
                 <a href="#login">Log out</a>
 
