--- a/forums.html
+++ b/forums.html
@@ -22,12 +22,12 @@
         <header>
             <div class="header">
 
-                <a href="#default" class="logo"><i class=" fa fa-solid fa-user"></i>HAPPY FEET</a>
+                <a href="forums.html" class="logo"><i class=" fa fa-solid fa-user"></i>HAPPY FEET</a>
                 <div class="header-right">
                     <a class="active" href="forums.html">Home</a>
-                    <a href="#contact">fav</a>
-                    <a href="#about">create post</a>
-                    <a href="#login">Log out</a>
+                    <a href="favorite.html">favorite</a>
+                    <a href="createThread.html">create post</a>
+                    <a href="signinForm.html">Log out</a>
 
                 </div>
             </div>
@@ -35,41 +35,39 @@
     </header>
     <div id=" main-content">
     <div id="container" class="container">
-        <button id="hide-container" class="hidecontainer" onclick="hideContainer()">Click me</button>
+
 
         <div class="subforum" action="\post.html">
 
             <div class="subforum-title">
-                <h1>General Information</button></h1>
+                <h1>HERE FREE SPEECH ALLOWED </h1>
+
             </div>
             <div class="subforum-row">
-                <div class="subforum-icon subforum-column center">
-                    <i class="fa-solid fa-user-robot"></i>
-                </div>
+
+                <div class="subforum-icon subforum-column center"><i class="fa fa-duotone fa-user-secret"></i>   </div>
                 <div class="subforum-description subforum-column">
-                    <h4><a onclick="location.href = 'detail.html'"href="#">Description Title ></a></h4>
-                    <p>Description Content: let's try to be cool, otherwise,w at 'sthe point in libing together with people youdont' live.</p>
+
+                    <p>Hello and welcome to our forum </p>
+
                 </div>
-                <div class="subforum-info subforum-column">
-                    <b><a href="">Last post</a></b> by <a href="">JustAUser</a> 
-                    <br>on <small>12 Dec 2020</small>
-                </div>
+
             </div>
         </div>
     </div>
         <!--More-->
         
         <div class="subforum">
-            <button onclick="showContainer()">show</button>
+
             <div class="subforum-title">
                 <h1>General Information</h1>
             </div>
-            <div class="subforum-row">
+            <div href="post.html" class="subforum-row">
                 <div class="subforum-icon subforum-column center">
-                    <i class="fa fa-solid fa-user"></i>
+                    <i class="fa fas fa-globe"></i>
                 </div>
                 <div class="subforum-description subforum-column">
-                    <h4><a href="#">Description Title</a></h4>
+                    <h4><a href="detail.html">Description Title</a></h4>
                     <p>Description Content: let's try to be cool, otherwise,w at 'sthe point in libing together with people youdont' live.</p>
                 </div>
 
@@ -81,9 +79,9 @@
             <hr class="subforum-devider">
             <div class="subforum-row">
                 <div class="subforum-icon subforum-column center">
-                    <i class="fa fa-duotone fa-user-secret"></i>                </div>
+                    <i class="fa fas fa-globe"></i>                </div>
                 <div class="subforum-description subforum-column">
-                    <h4><a href="#">Description Title</a></h4>
+                    <h4><a href="detail.html">Description Title</a></h4>
                     <p>Description Content: let's try to be cool, otherwise,w at 'sthe point in libing together with people youdont' live.</p>
                 </div>
 
@@ -95,10 +93,10 @@
             <hr class="subforum-devider">
             <div class="subforum-row">
                 <div class="subforum-icon subforum-column center">
-                    <i class="fa fa-car center"></i>
+                    <i class="fa fas fa-globe"></i>
                 </div>
                 <div class="subforum-description subforum-column">
-                    <h4><a href="#">Description Title</a></h4>
+                    <h4><a href="detail.html">Description Title</a></h4>
                     <p>Description Content: let's try to be cool, otherwise,w at 'sthe point in libing together with people youdont' live.</p>
                 </div>
 
@@ -110,10 +108,10 @@
             <hr class="subforum-devider">
             <div class="subforum-row">
                 <div class="subforum-icon subforum-column center">
-                    <i class="fa fa-car center"></i>
+                    <i class="fa fas fa-globe"></i>
                 </div>
                 <div class="subforum-description subforum-column">
-                    <h4><a href="#">Description Title</a></h4>
+                    <h4><a href="detail.html">Description Title</a></h4>
                     <p>Description Content: let's try to be cool, otherwise,w at 'sthe point in libing together with people youdont' live.</p>
                 </div>
 
@@ -125,10 +123,10 @@
             <hr class="subforum-devider">
             <div class="subforum-row">
                 <div class="subforum-icon subforum-column center">
-                    <i class="fa fa-car center"></i>
+                    <i class="fa fas fa-globe"></i>
                 </div>
                 <div class="subforum-description subforum-column">
-                    <h4><a href="#">Description Title</a></h4>
+                    <h4><a href="detail.html">Description Title</a></h4>
                     <p>Description Content: let's try to be cool, otherwise,w at 'sthe point in libing together with people youdont' live.</p>
                 </div>
                 <div class="subforum-info subforum-column">
@@ -142,12 +140,12 @@
             <div class="subforum-title">
                 <h1>General Information</h1>
             </div>
-            <div class="subforum-row">
+            <div href="post.html" class="subforum-row">
                 <div class="subforum-icon subforum-column center">
-                    <i class="fa fa-car center"></i>
+                    <i class="fa fas fa-globe"></i>
                 </div>
                 <div class="subforum-description subforum-column">
-                    <h4><a href="#">Description Title</a></h4>
+                    <h4><a href="detail.html">Description Title</a></h4>
                     <p>Description Content: let's try to be cool, otherwise,w at 'sthe point in libing together with people youdont' live.</p>
                 </div>
 
@@ -159,10 +157,10 @@
             <hr class="subforum-devider">
             <div class="subforum-row">
                 <div class="subforum-icon subforum-column center">
-                    <i class="fa fa-car center"></i>
+                    <i class="fa fas fa-globe"></i>
                 </div>
                 <div class="subforum-description subforum-column">
-                    <h4><a href="#">Description Title</a></h4>
+                    <h4><a href="detail.html">Description Title</a></h4>
                     <p>Description Content: let's try to be cool, otherwise,w at 'sthe point in libing together with people youdont' live.</p>
                 </div>
 
@@ -177,7 +175,7 @@
                     <i class="fa-solid fa-user-robot"></i>
                 </div>
                 <div class="subforum-description subforum-column">
-                    <h4><a href="#">Description Title</a></h4>
+                    <h4><a href="detail.html">Description Title</a></h4>
                     <p>Description Content: let's try to be cool, otherwise,w at 'sthe point in libing together with people youdont' live.</p>
                 </div>
 
@@ -192,7 +190,7 @@
                     <i class="fa fa-car center"></i>
                 </div>
                 <div class="subforum-description subforum-column">
-                    <h4><a href="#">Description Title</a></h4>
+                    <h4><a href="detail.html">Description Title</a></h4>
                     <p>Description Content: let's try to be cool, otherwise,w at 'sthe point in libing together with people youdont' live.</p>
                 </div>
 
@@ -206,20 +204,15 @@
         </div>
         <!---->
     </div>
-
+<footer>
+    <div class="footer-container">
+        <div class="footer-row">
+            <div class="footer-column">
+                <h1>HAAPY FEET &copy</h1>
+                <p>
+                    thanks for using this forum and we hope you enjoy it.
     <!-- Forum Info -->
-    <div class="forum-info">
-        <div class="chart">
-            MyForum - Stats &nbsp;<i class="fa fa-bar-chart"></i>
-        </div>
-        <span><u>5,369</u> Posts in <u>48</u> Topics by <u>8,124</u> Members.</span><br>
-        <span>Latest post: <b><a href="">Random post</a></b> on Dec 15 2021 By <a href="">RandomUser</a></span>.<br>
-        <span>Check <a href="">the latest posts</a> .</span><br>
-    </div>
 
-    <footer>
-
-    </footer>
     <script src="main.js"></script>
 </body>
 </html>
