--- a/signinForm.html
+++ b/signinForm.html
@@ -6,7 +6,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Varela+Round&display=swap" rel="stylesheet">git
   <link rel="stylesheet" href="loginpage.css">
 </head>
+
 <body>
+<header>
+  <div class="header">
+
+    <a href="forums.html" class="logo"><i class=" fa fa-solid fa-user"></i>HAPPY FEET</a>
+    <div class="header-right">
+      <a class="active" href="forums.html">Home</a>
+      <a href="favorite.html">favorite</a>
+      <a href="createThread.html">create post</a>
+      <a href="#login">Log out</a>
+
+    </div>
+  </div>
+</header>
 
 <div class="container">
   <div class="item-container">
