--- a/loginform.html
+++ b/loginform.html
@@ -12,16 +12,19 @@
 
 <div class="container">
   <div class="item-container">
-    <h2 class="log-in">LOG IN</h2>
+    <h2 class="log-in">REGISTER</h2>
   </div>
   <div class="item-container">
 
 
   </div>
   <div class="item-container">
-    <p>login using email</p>
+    <p>register using email</p>
   </div>
   <form>
+    <div class="username">
+      <label for="username" class="label">Username</label><br>
+      <input type="text" >
     <div class="form-input">
       <label for="email" class="label">Email</label>
       <input type="text" >
