--- a/public/HTML/forums.html
+++ b/public/HTML/forums.html
@@ -7,9 +7,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forum</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="icon" href="graphic.png">
+    <link rel="icon" href="../../graphic.png">
 
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -213,6 +213,6 @@
                     thanks for using this forum and we hope you enjoy it.
     <!-- Forum Info -->
 
-    <script src="main.js"></script>
+    <script src="../JS/main.js"></script>
 </body>
 </html>
