--- a/public/HTML/posts.html
+++ b/public/HTML/posts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forum</title>
-    <link rel="stylesheet" href="post.css">
+    <link rel="stylesheet" href="../CSS/post.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital@1&display=swap" rel="stylesheet">
@@ -202,6 +202,6 @@
 
     </footer>
 
-    <script src="main.js"></script>
+    <script src="../JS/main.js"></script>
 </body>
 </html>
